# ChangeLog for net-analyzer/ntop
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ntop/ChangeLog,v 1.42 2006/01/12 18:49:12 cryos Exp $

  12 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> ntop-3.0.ebuild:
  Stable on amd64.

*ntop-3.2 (30 Dec 2005)

  30 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  +files/ntop-3.2-build.patch, files/ntop-confd, +ntop-3.2.ebuild:
  Version bump #111389 by Eric Brown. Also fix up dependencies #111557 by
  Carsten Lohrke, broken configure option passing #113819 by Henrik Sankala,
  and uclibc support #117082 by Natanael Copa.

  15 Sep 2005; Carlos Silva <r3pek@gentoo.org> ntop-3.0.ebuild:
  Marking ntop-3.0 ~x86 since it have some memory leak problems

  24 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> ntop-3.1.ebuild:
  FreeBSD fix: root:root -> root:0.

  23 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> ntop-3.1.ebuild:
  Use -1 instead of /bin/false, bug #103421.

  29 Jul 2005; Daniel Black <dragonheart@gentoo.org> ntop-3.1.ebuild:
  removed die from epatch || die.

  09 May 2005; Eldad Zack <eldad@gentoo.org> ntop-3.1.ebuild:
  Fixed ACCESS VIOLATION that occurs if there is no /var/lib/ntop.

  19 Feb 2005; Daniel Black <dragonheart@gentoo.org> ntop-3.1.ebuild:
  Quoted NTOP_OPTS in /etc/conf.d/ntop to fix bug #80663. Thanks to\ Alan McNeil
  <alanmcneil@mac.com>

  10 Feb 2005; Aaron Walker <ka0ttic@gentoo.org> ntop-3.1.ebuild:
  Install internal html files to the correct place for bug 81449.

  31 Jan 2005; Daniel Black <dragonheart@gentoo.org> ntop-3.0.ebuild,
  ntop-3.1.ebuild:
  virtual/libpcap transition

*ntop-3.1 (16 Jan 2005)

  16 Jan 2005; Daniel Black <dragonheart@gentoo.org>
  -files/gd-1.8.3-fpic.patch, -files/gdchart0.94c-fpic.patch,
  +files/globals-core.c.diff, -files/libpng-1.2.4-fpic.patch,
  -files/tcpwrap.patch, -files/zlib-1.1.4-build-fPIC.patch,
  -files/zlib-1.1.4-build-static-with-fpic.patch,