@@ -131,18 +131,26 @@ cleanup autotools
                ac_willfailoverride="no")
  
  AC_ARG_ENABLE(void,
-@@ -665,63 +665,63 @@
+@@ -665,63 +665,83 @@
  
  AC_ARG_WITH(ssl,
                [  --without-ssl               disable HTPPS support [[default=enabled]]],
 -              ac_disable_openssl="yes",
-+              ac_disable_openssl="$withval",
++              if test "x$withval" = xno; then
++                  ac_disable_openssl="yes"
++              else
++                  ac_disable_openssl="no"
++              fi,
                ac_disable_openssl="no")
  
  AC_ARG_WITH(zlib,
                [  --without-zlib              disable zlib [[default=enabled]]],
 -              ac_disable_zlib="yes",
-+              ac_disable_zlib="$withval",
++              if test "x$withval" = xno; then
++                  ac_disable_zlib="yes"
++              else
++                  ac_disable_zlib="no"
++              fi,
                ac_disable_zlib="no")
  
  AC_ARG_ENABLE(sslv3,
@@ -166,7 +174,11 @@ cleanup autotools
  AC_ARG_ENABLE(plugins,
                [  --disable-plugins           disable compilation of plugins [[default=enabled]]],
 -              ac_disable_plugins="yes",
-+              ac_disable_plugins="$enableval",
++              if test "x$enableval" = xno; then
++                  ac_disable_plugins="yes"
++              else
++                  ac_disable_plugins="no"
++              fi,
                ac_disable_plugins="no")
  
  AC_ARG_ENABLE(  static-plugins,
@@ -185,7 +197,11 @@ cleanup autotools
  AC_ARG_ENABLE(snmp,
                [  --disable-snmp              Disable SNMP support [[default=disable]]],
 -              ac_disable_snmp="no",
-+              ac_disable_snmp="$enableval",
++              if test "x$enableval" = xno; then
++                  ac_disable_snmp="yes"
++              else
++                  ac_disable_snmp="no"
++              fi,
                ac_disable_snmp="yes")
  
  AC_ARG_ENABLE(i18n,
@@ -204,7 +220,11 @@ cleanup autotools
                [  --disable-ipv6              use IPv6 [[default=enabled]]],
 -	      ac_disable_ipv6="yes",
 -	      ac_disable_ipv6="no")        
-+              ac_disable_ipv6="$enableval",
++              if test "x$enableval" = xno; then
++                  ac_disable_ipv6="yes"
++              else
++                  ac_disable_ipv6="no"
++              fi,
 +              ac_disable_ipv6="no")
  
  dnl>
