@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ntop
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ntop/ChangeLog,v 1.42 2006/01/12 18:49:12 cryos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ntop/ChangeLog,v 1.43 2006/01/27 05:21:22 vapier Exp $
+
+  27 Jan 2006; Mike Frysinger <vapier@gentoo.org>
+  files/ntop-3.2-build.patch:
+  Make sure the inverted options are handled properly #111557.
 
   12 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> ntop-3.0.ebuild:
   Stable on amd64.
